--- a/log-check/templates/log-report.html
+++ b/log-check/templates/log-report.html
@@ -4,7 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <title>日志巡检-{{ data.time }}</title>
+    <style>
+        footer {
+            display: block;
+        }
+        .footer .copyright {
+            padding: 0.9375rem;
+            background: white;
+        }
+        .footer .copyright p {
+            text-align: center;
+            margin: 0;
+            color: #898989;
+        }
+        .footer .copyright a {
+            color: #7571f9;
+        }
+        [data-theme-version="dark"] .footer .copyright {
+            background-color: #1b2b42;
+        }
+        [data-theme-version="dark"] .footer .copyright p {
+            color: #fff;
+        }
+    </style>
 </head>
+<div>
 <body>
 <table border="1" width="100%">
     <thead>
@@ -32,6 +56,11 @@
         {% endfor %}
     </tbody>
 </table>
-
 </body>
+</div>
+<div class="footer">
+    <div class="copyright">
+        <p>Copyright &copy;2022 Developed by dt </p>
+    </div>
+</div>
 </html>
