--- a/os-check/templates/report-cssinline.html
+++ b/os-check/templates/report-cssinline.html
@@ -1,4 +1,4 @@
-{% set data =  hostvars | get_check_data %}
+{% set data =  hostvars | get_os_check_data %}
 <!DOCTYPE html>
 <html lang="en"
       style="outline: none; box-sizing: inherit; margin: 0; padding: 0; --blue: #324cdd; --indigo: #6610f2; --purple: #6f42c1; --pink: #e83e8c; --red: #ec0c38; --orange: #fd7e14; --yellow: #fa3a0e; --green: #2dce89; --teal: #00A9A2; --cyan: #11cdef; --white: #fff; --gray: #f7fafc; --gray-dark: #333333; --primary: #7571f9; --secondary: #9097c4; --success: #6fd96f; --info: #4d7cff; --warning: #f29d56; --danger: #ff5e5e; --light: #f8f9fa; --dark: #333333; --breakpoint-xs: 0; --breakpoint-sm: 576px; --breakpoint-md: 768px; --breakpoint-lg: 992px; --breakpoint-xl: 1200px; --breakpoint-xxl: 1400; --font-family-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'; --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace; font-family: sans-serif; line-height: 1.15; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; -ms-overflow-style: scrollbar; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>巡检报告-{{ data.time }}</title>
+    <title>Linux巡检-{{ data.time }}</title>
     <style type="text/css">
         @media (min-width: 576px) {
             .container {
